--- a/docs/lab-05.Rmd
+++ b/docs/lab-05.Rmd
@@ -6,6 +6,9 @@ output:
   html_document:
     theme: journal
 ---
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE, out.width = "75%", fig.align = 'center')
+```
 
 ```{r, message=FALSE,warning=FALSE}
 library(tidyverse)
@@ -31,32 +34,26 @@ bb=read_csv("../data/uscities.csv") %>%
   st_bbox() %>%
   st_as_sfc() %>%
   st_as_sf()
-
-
-#mapview(bb)
-
 ```
 
 
 # Question 2:
-```{r, message = FALSE, warning=FALSE}
-
-
+```{r, message = FALSE, warning=FALSE, echo=FALSE}
 bbwgs= bb %>% st_transform(4326)
 
-bb=st_bbox(bbwgs)
+bbl=st_bbox(bbwgs)
 
 
 scene=lsat_scenes() %>%
-  filter(min_lat<= bb$ymin, max_lat >= bb$ymax) %>%
-  filter(min_lon<= bb$xmin, max_lon >= bb$xmax) %>%
+  filter(min_lat<= bbl$ymin, max_lat >= bbl$ymax) %>%
+  filter(min_lon<= bbl$xmin, max_lon >= bbl$xmax) %>%
   filter(as.Date(acquisitionDate) == as.Date("2016-09-26"))
 
 write.csv(scene,file="../data/palo-flood.csv")
+```
 
 
-###
-
+```{r}
 meta= read_csv("../data/palo-flood.csv")
 
 files= lsat_scene_files(meta$download_url) %>%
@@ -67,51 +64,68 @@ files= lsat_scene_files(meta$download_url) %>%
 st= sapply(files,lsat_image)
 
 s=stack(st) %>% setNames(c(paste0("band", 1:6)))
+```
 
-#The dimensions of my stacked image are: 7811 (nrow)/ 7681 (ncol)/ 59996291 (ncell)/ 6 (nlayers)
+The dimensions of my stacked image are: 7811 (nrow)/ 7681 (ncol)/ 59996291 (ncell)/ 6 (nlayers)
 
-#The CRS is: +proj=utm +zone=15 +datum=WGS84 +units=m +no_defs 
+The CRS is: +proj=utm +zone=15 +datum=WGS84 +units=m +no_defs 
 
-#The cell resolution is: 30, 30  (x, y)
+The cell resolution is: 30, 30  (x, y)
 
+```{r, message = FALSE, warning=FALSE}
 cropper= bbwgs %>%  st_transform(crs(s))
 
 r=crop(s, cropper)
-
-#The dimensions of my cropped image stacked are: 340 (nrow)/ 346 (ncol)/ 117640 (ncell)/ 6 (nlayers)
-
-#The CRS is: +proj=utm +zone=15 +datum=WGS84 +units=m +no_defs 
-
-#The cell resolution is: 30, 30  (x, y)
-
 ```
+
+The dimensions of my cropped image stacked are: 340 (nrow)/ 346 (ncol)/ 117640 (ncell)/ 6 (nlayers)
+
+The CRS is: +proj=utm +zone=15 +datum=WGS84 +units=m +no_defs 
+
+The cell resolution is: 30, 30  (x, y)
+
+
 
 
 # Question 3:
+
+#### True Color
 ```{r, message=FALSE,warning=FALSE}
 par(mfrow=c(1,2))
-#True Color
 plotRGB(r, r=4 ,g=3 ,b=2, stretch= "lin")
 plotRGB(r, r=4 ,g=3 ,b=2, stretch= "hist")
-#Color Infared
+```
+
+#### Color Infared
+
+```{r}
+par(mfrow=c(1,2))
 plotRGB(r, r=5 ,g=4 ,b=3, stretch= "lin")
 plotRGB(r, r=5 ,g=4 ,b=3, stretch= "hist")
-#False Color Water Focus
+```
+
+#### False Color Water Focus
+
+```{r}
+par(mfrow=c(1,2))
 plotRGB(r, r=5 ,g=6 ,b=4, stretch= "lin")
 plotRGB(r, r=5 ,g=6 ,b=4, stretch= "hist")
-#My Choice
+```
+
+#### My Choice
+
+```{r}
+par(mfrow=c(1,2))
 plotRGB(r, r=1 ,g=3 ,b=6, stretch= "lin")
 plotRGB(r, r=1 ,g=3 ,b=6, stretch= "hist")
-
-#Color stretching determines how the values are represented on the image.
-
 ```
+Color stretching determines how the values are represented on the image.
 
 
 # Question 4:
-```{r, message=FALSE,warning=FALSE}
-#Step 1
 
+### Step 1
+```{r, message=FALSE,warning=FALSE}
 palette= colorRampPalette(c("blue","white","red"))
 ndvi=(r$band5 - r$band4) / (r$band5 + r$band4)
 ndwi=(r$band3 - r$band5) / (r$band3 + r$band5)
@@ -124,14 +138,13 @@ plot(ndwi,col=palette(256), legend=FALSE)
 plot(mndwi,col=palette(256), legend=FALSE)
 plot(wri,col=palette(256), legend=FALSE)
 plot(swi,col=palette(256), legend=FALSE)
+```
 
-#Describe the 5 images. How are they simular and where do they deviate?
+All five images give us the results of different index methods which we first had to state. The normalized methods in short minimizes the effects of illumination and enhance spectral features that aren't originally visible. Our water threshold which is given show us areas that both retain and don't retain water & for NDVI index, numbers less than 0 = water shown in blue and numbers greater than 0 = vegetation shown in red. For both NDWI and MNDWI Index's, numbers greater than 0 = water shown in red and numbers less than 0 = vegetation without water presence. For WRI Index, it shows the water ratio by displaying water presence in cells with numbers greater than 1 in red. The same can be said for the SWI Index since it displays water presence in cells with values greater than 5.  
 
-#All five images give us the results of different index methods which we first had to state. The normalized methods in short minimizes the effects of illumination and enhance spectral features that aren't originally visible. Our water threshold which is given show us areas that both retain and don't retain water & for NDVI index, numbers less than 0 = water shown in blue and numbers greater than 0 = vegetation shown in red. For both NDWI and MNDWI Index's, numbers greater than 0 = water shown in red and numbers less than 0 = vegetation without water presence. For WRI Index, it shows the water ratio by displaying water presence in cells with numbers greater than 1 in red. The same can be said for the SWI Index since it displays water presence in cells with values greater than 5.  
+### Step 2
 
-
-#Step 2
-
+```{r}
 thresholding1= function(x){ifelse(x <= 0,1,NA)}
 thresholding2= function(x){ifelse(x >= 0,1,NA)} 
 thresholding3= function(x){ifelse(x >= 0,1,NA)} 
@@ -149,8 +162,6 @@ plot(flood2, col= "blue", legend=FALSE)
 plot(flood3, col= "blue", legend=FALSE)
 plot(flood4, col= "blue", legend=FALSE)
 plot(flood5, col= "blue", legend=FALSE)
-#mapview(flood1) 
-
 ```
 
 
@@ -170,43 +181,56 @@ floods5= calc(swi,thresholdings5)
 
 
 # Question 5:
+
+### Genaric Steps of KMeans Clustering
+  1. Split raster data/structure into just data
+  2. Calculate KMeans clustering on data
+  3. Add clustered data to original raster structure
+
 ```{r, message=FALSE,warning=FALSE}
-  #1. Split raster data/structure into just data
-  #2. Calculate KMeans clustering on data
-  #3. Add clustered data to original raster structure
-
 set.seed(1)
+```
 
-#1. Splited Raster and get data to cluster
+Must be set for any random process in R so that results are the same.
+
+#### 1. Spliting Raster and getting data to cluster
+```{r}
 r_extract = getValues(r)
-r_nna = na.omit(r_extract) #No NAs, no need to omit
-#data was extracted band by band (there are 6 columns)
+r_nna = na.omit(r_extract)
+```
+There were no NAs, no need to use `na.omit()` and data was extracted band by band (there are 6 columns)
 
-#2. Calcualting the KMeans Cluster
+#### 2. Calcualting the KMeans Cluster
+
+```{r}
 kmeans_r = kmeans(r_extract, 12)
 fviz_cluster(kmeans_r, geom="point", data = r_extract)
+```
 
-#3. Applying the cluster to raster structure
+#### 3. Applying the cluster to raster structure
+
+```{r}
 kmeans_raster = floods2
 values(kmeans_raster) = kmeans_r$cluster
 plot(kmeans_raster, col = viridis::plasma(12))
-
 ```
 
+### Step 5.3
 
 ```{r, message=FALSE,warning=FALSE}
-#Step 5.3
-
 com_table = table(values(floods2), values(kmeans_raster))
 
 which.max(com_table[2,])
+```
 
+Here we determined which group in our KMeans clustering correlated to water pixels in our raster.
+
+```{r}
 rast_thresh = function(x){ifelse(x != which.max(com_table[2,]),0,1)}
 kmeans_floodmask = calc(kmeans_raster, rast_thresh)
 
 floodst = stack(floods1, floods2, floods3, floods4, floods5, kmeans_floodmask)
 plot(floodst)
-
 ```
 
 
@@ -218,29 +242,29 @@ raster_stats = cellStats(floodst, stat=sum)*res(floodst)^2/1e6 #showing area cov
 
 ```
 
-#Step 1
+### Step 1
 ```{r, message=FALSE,warning=FALSE}
 kable(raster_stats, col.names = c("Area Covered"), caption = "Area Covered by each classification") %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
 
 ```
 
-# Step 2
+### Step 2
 ```{r, message=FALSE,warning=FALSE}
 plot(plot_rsum, col = blues9)
 
 ```
-# Step 3
+
+### Step 3
 ```{r, message=FALSE,warning=FALSE}
 plot_copy = (plot_rsum[plot_rsum == 0] = NA)
 plot(plot_rsum, col = blues9)
 
 ```
 
+Why is our raster STACK, comprised of 6 RASTERS, have values ranging from 6 to 0? 
 
-#### Why is our raster STACK, comprised of 6 RASTERS, have values ranging from 6 to 0? 
-
-#### -Perhaps they're an average of the values at that pixel.
+ - Perhaps they're an average of the values at that pixel.
 
 
 # Extra Credit:
@@ -251,13 +275,7 @@ aoi = st_point(c(-91.78946, 42.06303)) %>%
   st_sf() %>% 
   st_transform(st_crs(floodst))
 
-aoi2 = st_point(c(-91.78482, 42.06245)) %>% 
-  st_sfc(crs = 4326) %>% 
-  st_sf() %>% 
-  st_transform(st_crs(floodst))
-# 
-# extract(floodst, aoi)
-# extract(floodst, aoi2)
-
+extract(floodst, aoi)
 ```
 
+Here I identified which layers correctly labeled the location in the image as a flood. 
