--- a/docs/lab-02-nate (new).Rmd
+++ b/docs/lab-02-nate (new).Rmd
@@ -6,67 +6,79 @@ output:
   html_document:
     theme: flatly
 ---
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE, out.width = "75%", fig.align = 'center')
+```
 
+# Question:1
+
+### Step 1
+##### Covid Url (Read In The Url)
 ```{r, message=FALSE,warning=FALSE}
-#Question:1
-
-#Step 1
-#Covid Url (Read In The Url)
-
 library(tidyverse)
 covid=read_csv("https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-counties.csv")
 ```
 
+### Step 2
 ```{r, message=FALSE,warning=FALSE}
-# Step 2
-# Making A Subset That Filters The Data To California And Added A New Column (Mutate) With The Daily New Cases Using Either diff or lag.
-
 q1 = covid %>% 
   filter(state == "California")%>%
   group_by(county) %>% 
   mutate(newCases = c(cases[1], diff(cases))) %>% 
   ungroup() %>% 
   filter(date >= max(date)-13)
+```
 
-#Step 3
-#Five Counties with the Most Cumulative Case
+Making A Subset That Filters The Data To California And Added A New Column (Mutate) With The Daily New Cases Using Either diff or lag.
 
+### Step 3
+
+```{r}
 most_all_time = q1 %>% 
   filter(date == max(date)) %>% 
   slice_max(cases, n = 5) %>% 
   select(county, cases)
 
 knitr::kable(most_all_time, caption = "Most Cumulative Cases / Most Cases Of All Time", col.names = c("Counties", "Max Cases To Date"))
+```
 
-#Five Counties With The Most New Data (From Yesterday)
+Five Counties with the Most Cumulative Case
 
+```{r}
 most_new_data_from_yesterday = q1 %>% 
   filter(date == max(date)) %>% 
   slice_max(newCases, n = 5)
 
 knitr::kable(most_all_time, caption = "Five Counties With The Most New Data (From Yesterday)", col.names = c("Counties", "New Cases"))
+```
 
-#Step 4
-#Please download the data and store it in the data directory of your project. = Did!
+### Step 4
+
+Please download the data and store it in the data directory of your project. = Done!
   
-#Step 5
-#Load the population data with the “dataset importer” (find the file in your data directory via the file explorer –> click on it –> select “Import Dataset”). Be sure to copy the code preview (ignore the View(...)) and insert it in your Rmarkdown. This will allow the data to be referenced every time the file is run! = Did!
+### Step 5
 
+Loaded the population data with the “dataset importer” (it was found in the file in my data directory via the file explorer –> click on it –> “Import Dataset”. I copied the code preview (ignored the View(...)) and inserted it in this Rmarkdown. This will allow the data to be referenced every time the file is run! = Done!
+
+### Step 6
+
+```{r}
 library(readxl)
 
 PopulationEstimates=read_excel("../data/PopulationEstimates.xls", 
   skip = 2) %>% 
   select(fips = FIPStxt, pop2019 = "POP_ESTIMATE_2019", Area_Name)
-
-#Step 7
-#Join the population data to the California COVID data.
-
-j1 = left_join(covid, PopulationEstimates, by = "fips")
-
 ```
 
-#Step 9
-#Number Of Cases In The Last 14 Days Per 100,000 
+### Step 7
+```{r}
+j1 = left_join(covid, PopulationEstimates, by = "fips")
+```
+
+Join the population data to the California COVID data.
+
+### Step 9
+##### Number Of Cases In The Last 14 Days Per 100,000 
 
 ```{r, message=FALSE,warning=FALSE}
 last14 = j1 %>% 
@@ -83,12 +95,13 @@ last14 = j1 %>%
   filter(per100 <= 100)
 ```
 
+# Question 2
+
+In this question, we looked at the story of 4 states and the impact scale it can have on data interpretation. The states include: New York, California, Louisiana, and Florida. My task was to make a faceted bar plot showing the number of daily, new cases at the state level.
+
+### Step 1
+
 ```{r, message=FALSE,warning=FALSE}
-#Question 2
-
-#Question 2:In this question, we are going to look at the story of 4 states and the impact scale can have on data interpretation. The states include: New York, California, Louisiana, and Florida.Your task is to make a faceted bar plot showing the number of daily, new cases at the state level.
-
-#Step 1
 
 fourStates=covid %>% 
   group_by(state,date) %>% 
@@ -102,9 +115,9 @@ fourStates=covid %>%
 
 ```
 
-```{r, message=FALSE,warning=FALSE}
-#Step 2
+### Step 2
 
+```{r, message=FALSE,warning=FALSE}
 ggplot(data = fourStates, aes(x = date)) + 
   geom_col(aes(y = newCases), col = "pink") + 
   geom_line(aes(y= roll7), col = "darkred")+
@@ -115,7 +128,6 @@ ggplot(data = fourStates, aes(x = date)) +
        caption = "Based On NY Times Covid Data",  
        subtitle = 'Data Source: NY Times') +
        theme_bw()
-
 ```
 
 ```{r, message=FALSE,warning=FALSE}
